feat: app ping
